fix alignment

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
 #buttonArea{
     margin-top: 2em;
     color: rgb(235, 206, 46);
-    width: 600px;
+    width: 800px;
     height: 100px;
     display:flex;
     justify-content: space-between;
@@ -64,6 +64,8 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 2px;
     background-color: white;
     border-radius: 50%;
     width: 100px;
